# talon-cli

./: Cargo.toml  README.md
mcp/: README.md  pyproject.toml  talon_mcp.py
src/: daemon.rs  format.rs  main.rs  net.rs
src/engine/: ai.rs  evo.rs  fts.rs  geo.rs  graph.rs  kv.rs  mod.rs  mq.rs  sql.rs  stats.rs  ts.rs  vec.rs
